update names and readme

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-name = streaming-data-joiner
+name = qross
 version = 0.0.1
 author = Bert Wagner
-description = A package for joining large datasets in memory
+description = A package for streaming large dataset joins in memory
 long_description = file: README.md
 long_description_content_type = text/markdown
 #url = https://github.com/pypa/sampleproject
