rename to crossjoin

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = qross
-version = 0.0.1
+name = crossjoin
+version = 1.0.0
 author = Bert Wagner
 description = A package for streaming large dataset joins in memory
 long_description = file: README.md
