--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = crossjoin
+name = streamquery
 version = 1.0.0
 author = Bert Wagner
 description = A package for streaming large dataset joins in memory
