--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-name = streamquery
+name = confluent
 version = 1.0.0
 author = Bert Wagner
-description = A package for streaming large dataset joins in memory
+description = A package for streaming cross-server dataset joins in memory
 long_description = file: README.md
 long_description_content_type = text/markdown
 #url = https://github.com/pypa/sampleproject
@@ -21,3 +21,7 @@ python_requires = >=3.6
 
 [options.packages.find]
 where = src
+
+[options.extras_require]
+test =
+    pytest,sqlite3
