--- a/setup.cfg
+++ b/setup.cfg
@@ -23,5 +23,4 @@ python_requires = >=3.6
 where = src
 
 [options.extras_require]
-test =
-    pytest,sqlite3,pytest-cov
+test = pytest; sqlite3; pytest-cov
