--- a/setup.cfg
+++ b/setup.cfg
@@ -18,9 +18,14 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires = 
+    pyodbc
 
 [options.packages.find]
 where = src
 
 [options.extras_require]
-test = pytest; sqlite3; pytest-cov
+test = 
+    pytest
+    sqlite3
+    pytest-cov
