--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = confluent
-version = 1.0.0
+name = crosstream
+version = 0.1.0
 author = Bert Wagner
 description = A package for streaming cross-server dataset joins in memory
 long_description = file: README.md
