--- a/setup.cfg
+++ b/setup.cfg
@@ -5,14 +5,7 @@ author = Bert Wagner
 description = A package for streaming cross-server dataset joins in memory
 long_description = file: README.md
 long_description_content_type = text/markdown
-#url = https://github.com/pypa/sampleproject
-# project_urls =
-#     Bug Tracker = https://github.com/pypa/sampleproject/issues
-# classifiers =
-#     Programming Language :: Python :: 3
-#     License :: OSI Approved :: MIT License
-#     Operating System :: OS Independent
-
+url = https://github.com/bertwagner/crosstream
 [options]
 package_dir =
     = src
